--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     </properties>
 
     <dependencies>
+        <!--OpenJFX dependencies-->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -26,6 +27,7 @@
             <version>17.0.6</version>
         </dependency>
 
+        <!--Jupiter dependencies-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -37,6 +39,13 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!--Table-saw dependencies-->
+        <dependency>
+            <groupId>tech.tablesaw</groupId>
+            <artifactId>tablesaw-core</artifactId>
+            <version>0.34.1</version>
         </dependency>
     </dependencies>
 
