--- a/src/main/resources/properties/database.properties
+++ b/src/main/resources/properties/database.properties
@@ -1,3 +1,3 @@
 databaseUrl = zipcluster.kjc7hdt.mongodb.net/?retryWrites=true&w=majority&appName=ZipCluster
-username = ivelicluka
-password = mN5jDm84Ev
+username = <username>
+password = <password>
